src/test/run-pass/fat-lto.rs
// compile-flags: -Clto=fat
// no-prefer-dynamic

fn main() {
    println!("hello!");
}
