src/test/compile-fail/unnecessary-io.rs
// error-pattern: calculated effect is ''
impure fn main() {
  log "hi";
}